Do not render partial for footer.

--- a/apps/web/templates/application.html.slim
+++ b/apps/web/templates/application.html.slim
@@ -13,4 +13,7 @@ html
 
       == yield
 
-    == render partial: "footer"
+    footer
+      div.container
+        p.text-muted
+          | by <a href="https://github.com/smt116" title="smefju">smefju</a>
