--- a/apps/web/templates/application.html.slim
+++ b/apps/web/templates/application.html.slim
@@ -13,7 +13,4 @@ html
 
       == yield
 
-    footer
-      div.container
-        p.text-muted
-          | by <a href="https://github.com/smt116" title="smefju">smefju</a>
+    == render partial: "footer"
